// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile Menu adds styles to External Link 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 svg {
  margin-right: 8px;
}

.c1.iconOnly svg {
  margin: 0;
}

.c1.external {
  color: #0080a5;
}

.c1.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1.external:visited {
  color: #094c6c;
}

.c1.external:visited svg {
  color: #094c6c;
}

.c1.navigation {
  color: #57666e;
}

.c1.navigation:hover {
  color: #000;
}

.c1.navigation.active {
  color: #0080a5;
}

.c0 > * {
  margin: 12px 0;
}

.c0 > a {
  margin: 0;
  padding: 12px 0;
}

.c0 .external,
.c0 .external:visited {
  color: #57666E;
}

.c0 .external svg,
.c0 .external:visited svg {
  color: #57666E;
}

.c0 .external:hover,
.c0 .external:visited:hover {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .external:hover svg,
.c0 .external:visited:hover svg {
  color: #000000;
}

<li
  className="c0"
>
  <a
    aria-disabled="false"
    className="c1 external"
    href="javascript:void(0)"
  >
    Test Link
  </a>
</li>
`;

exports[`Mobile Menu matches snapshot 1`] = `
.c0 > * {
  margin: 12px 0;
}

.c0 > a {
  margin: 0;
  padding: 12px 0;
}

.c0 .external,
.c0 .external:visited {
  color: #57666E;
}

.c0 .external svg,
.c0 .external:visited svg {
  color: #57666E;
}

.c0 .external:hover,
.c0 .external:visited:hover {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .external:hover svg,
.c0 .external:visited:hover svg {
  color: #000000;
}

<li
  className="c0"
>
  <p>
    Test
  </p>
</li>
`;
